# FfmpegAndroidLibraryKit

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rahulp/ffmpegkit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rahulp/ffmpegkit/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/rahulp/ffmpegkit/: ExampleUnitTest.kt
ffmpeg-core/: build.gradle.kts
ffmpeg-core/src/androidTest/java/com/rahulp/ffmpeg_core/: ExampleInstrumentedTest.kt
ffmpeg-core/src/main/cpp/: CMakeLists.txt  ffmpeg_jni.cpp
ffmpeg-core/src/main/java/com/rahulp/ffmpeg_core/: FFmpegKit.kt  FFmpegNative.kt  FFmpegSession.kt  FFmpegSessionManager.kt  LogCallback.kt  ProgressParser.kt
ffmpeg-core/src/main/java/com/rahulp/ffmpeg_core/command/: FFmpegCommandFactory.kt
ffmpeg-core/src/test/java/com/rahulp/ffmpeg_core/: ExampleUnitTest.kt  FFmpegCommandFactoryTest.kt
gradle/: libs.versions.toml
